- Add some more transparency - Update README.md to use new embdeded CSS code

--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -8,6 +8,7 @@
 		<UseWPF>true</UseWPF>
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<RootNamespace>MicaDiscord</RootNamespace>
+		<Version>1.1.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
