- Add option to minimize to System Tray - Change some CSS (Now the call window will have backdrop instead of black color)

--- a/Mica Discord/Settings.settings
+++ b/Mica Discord/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="ReplaceDiscordBackground" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="UseSystemTray" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
