--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -9,7 +9,17 @@
 		<ApplicationManifest>app.manifest</ApplicationManifest>
 		<RootNamespace>MicaDiscord</RootNamespace>
 		<Version>1.1.0</Version>
+		<UseWindowsForms>True</UseWindowsForms>
+		<ApplicationIcon>DiscordLogo.ico</ApplicationIcon>
 	</PropertyGroup>
+
+	<ItemGroup>
+	  <Content Remove="Resources\DiscordLogo.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="DiscordLogo.ico" />
+	</ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
@@ -23,11 +33,23 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="ProgramResources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>ProgramResources.resx</DependentUpon>
+	  </Compile>
 	  <Compile Update="Settings.Designer.cs">
 	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>Settings.settings</DependentUpon>
 	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="ProgramResources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>ProgramResources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
 
 	<ItemGroup>
