--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -1,62 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>WinExe</OutputType>
-		<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
-		<RuntimeIdentifiers>win-x86;win-x64</RuntimeIdentifiers>
-		<Nullable>enable</Nullable>
-		<UseWPF>true</UseWPF>
-		<ApplicationManifest>app.manifest</ApplicationManifest>
-		<RootNamespace>MicaDiscord</RootNamespace>
-		<Version>1.2.0</Version>
-		<UseWindowsForms>True</UseWindowsForms>
-		<ApplicationIcon>DiscordLogo.ico</ApplicationIcon>
-	</PropertyGroup>
+  <PropertyGroup>
+    <OutputType>WinExe</OutputType>
+	<TargetFramework>net6.0-windows</TargetFramework>
+    <Nullable>enable</Nullable>
+    <UseWPF>true</UseWPF>
+    <AssemblyName>MicaDiscord</AssemblyName>
+    <RootNamespace>MicaDiscord</RootNamespace>
+  </PropertyGroup>
 
-	<ItemGroup>
-	  <Content Remove="Resources\DiscordLogo.png" />
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
+    <PackageReference Include="PInvoke.DwmApi" Version="0.7.104" />
+  </ItemGroup>
 
-	<ItemGroup>
-	  <Content Include="DiscordLogo.ico" />
-	</ItemGroup>
+  <ItemGroup>
+    <Compile Update="Settings.Designer.cs">
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <AutoGen>True</AutoGen>
+    </Compile>
+  </ItemGroup>
 
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
-		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.0.1" />
-		<PackageReference Include="ModernWpfUI" Version="0.9.4" />
-		<PackageReference Include="PInvoke.DwmApi" Version="0.7.104" />
-		<PackageReference Include="PInvoke.Shell32" Version="0.7.104" />
-		<PackageReference Include="PInvoke.User32" Version="0.7.104" />
-		<PackageReference Include="PInvoke.Windows.Core" Version="0.7.104" />
-		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-	</ItemGroup>
+  <ItemGroup>
+    <None Update="Settings.settings">
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <CustomToolNamespace>MicaDiscord</CustomToolNamespace>
+    </None>
+  </ItemGroup>
 
-	<ItemGroup>
-	  <Compile Update="ProgramResources.Designer.cs">
-	    <DesignTime>True</DesignTime>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>ProgramResources.resx</DependentUpon>
-	  </Compile>
-	  <Compile Update="Settings.Designer.cs">
-	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>Settings.settings</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <EmbeddedResource Update="ProgramResources.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
-	    <LastGenOutput>ProgramResources.Designer.cs</LastGenOutput>
-	  </EmbeddedResource>
-	</ItemGroup>
-
-	<ItemGroup>
-	  <None Update="Settings.settings">
-	    <Generator>SettingsSingleFileGenerator</Generator>
-	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-	  </None>
-	</ItemGroup>
+  <ItemGroup>
+    <Page Update="MainWindow.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <Generator>MSBuild:Compile</Generator>
+      <CustomToolNamespace>MicaDiscord</CustomToolNamespace>
+    </Page>
+    <Page Update="SettingsDialog.xaml">
+      <CustomToolNamespace>MicaDiscord</CustomToolNamespace>
+    </Page>
+  </ItemGroup>
 
 </Project>
