--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -7,6 +7,7 @@
     <UseWPF>true</UseWPF>
     <AssemblyName>MicaDiscord</AssemblyName>
     <RootNamespace>MicaDiscord</RootNamespace>
+    <Version>1.4.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
