Technical: - Change namespace to be a correct one
Features:
- Implement Systray Icon
- Finally Custom TitleBar
- Dark/White Mode Adaptation (only works if Replace Discord Background setting is enabled)
- Adapt CSS, Dark mode will use light color instead of dark color (and add the setting to be able to turn this off)

--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -8,11 +8,28 @@
     <AssemblyName>MicaDiscord</AssemblyName>
     <RootNamespace>MicaDiscord</RootNamespace>
     <Version>1.4.0</Version>
+    <UseWindowsForms>True</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Remove="App.xaml" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
     <PackageReference Include="PInvoke.DwmApi" Version="0.7.104" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationDefinition Update="App.xaml">
+      <CustomToolNamespace>MicaDiscord</CustomToolNamespace>
+    </ApplicationDefinition>
   </ItemGroup>
 
   <ItemGroup>
