--- a/Mica Discord/Settings.settings
+++ b/Mica Discord/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="ModeAwareCSS" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="UseBackdropAnyway" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
