- Make the design more fluent - Use accent colors - Fix problems with unable to exit program - Minor Change in SettingsDialog algorithm

--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.1150.38" />
     <PackageReference Include="PInvoke.DwmApi" Version="0.7.104" />
+    <PackageReference Include="PInvoke.UxTheme" Version="0.7.104" />
   </ItemGroup>
 
   <ItemGroup>
