--- a/Mica Discord/Settings.settings
+++ b/Mica Discord/Settings.settings
@@ -12,9 +12,15 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="ModeAwareCSS" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="UseBackdropAnyway" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ExcessiveAccentColor" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ExperimentalModernContextMenu" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
