--- a/Mica Discord/Mica Discord.csproj
+++ b/Mica Discord/Mica Discord.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-	<TargetFramework>net6.0-windows10.0.22000.0</TargetFramework>
+	<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
     <AssemblyName>MicaDiscord</AssemblyName>
@@ -12,6 +12,7 @@
     <PackageIcon>Mica Discord.png</PackageIcon>
     <ApplicationIcon>Mica Discord.ico</ApplicationIcon>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <SupportedOSPlatformVersion>7.0</SupportedOSPlatformVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -83,6 +84,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
       <Generator>SettingsSingleFileGenerator</Generator>
       <CustomToolNamespace>MicaDiscord</CustomToolNamespace>
+    </None>
+    <None Update="The CSS.css">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
