Changes (v.1.9.0): Fluent Icons Dynamically update CSS (Debug: Reading The CSS.css from working directory instead if the project one is not found, Release: Add the button to reload CSS) Disable DevTools by default and add the option to Settings Dramatic Change to CSS * Basically minor improvements and blur background on popup and menu and context menu

--- a/Mica Discord/Settings.settings
+++ b/Mica Discord/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="ExperimentalModernContextMenu" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="EnableDevTools" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
